Updating .gitignore and README.md